--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
           <a class="logo header__logo" href="index.html"
             ><span class="logo__web">Web</span>Studio</a
           >
-          <svg class="header__nav_icon" width="40px" height="40px">
-            <use href="./images/sprite.svg#icon-burger"></use>
-          </svg>
+          
           <!-- Навигация сайта -->
           <ul class="site-nav list">
             <li class="site-nav__item">
@@ -39,6 +37,11 @@
             <li class="site-nav__item"><a class="site-nav__link" href="">Контакты</a></li>
           </ul>
         </nav>
+        <button class="header__mobile-menu-button" type="button" data-menu-button>
+          <svg class="header__mobile-menu_icon" width="40px" height="40px">
+            <use href="./images/sprite.svg#icon-burger"></use>
+          </svg>
+        </button>
         <!-- Контакты -->
         <ul class="auth-nav list">
           <li class="auth-nav__item">
@@ -56,6 +59,40 @@
               +38 096 111 11 11</a>
           </li>
         </ul>
+      </div>
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu__container">
+          <button class="mobile-menu__close-button" type="button"data-menu-close>
+            <svg class="mobile-menu__close-button-icon" width="40px" height="40px">
+              <use href="./images/sprite.svg#icon-close-btn"></use>
+            </svg>
+          </button>
+          <ul class="mobile-menu__list">
+            <li class="mobile-menu__item"><a class="mobile-menu__link mobile-menu__link_current" href="index.html">Студия</a></li>
+            <li class="mobile-menu__item"><a class="mobile-menu__link" href="./portfolio.html">Портфолио</a></li>
+            <li class="mobile-menu__item"><a class="mobile-menu__link" href="">Контакты</a></li>
+          </ul>
+          <div class="mobile-contacts">
+            <a class="mobile-contacts__link mobile-contacts__link_tel" href="tel:+380961111111">  
+                +38 096 111 11 11</a>
+            <a class="mobile-contacts__link mobile-contacts__link_email" href="mailto:info@devstudio.com">  
+                info@devstudio.com</a>
+            <ul class="mobile-social-list">
+              <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Instagram</a></li>
+              <li class="mobile-social-list__item"><div class="mobile-social-list__line"></div></li>
+              <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Twitter</a></li>
+              <li class="mobile-social-list__item">
+                <div class="mobile-social-list__line"></div>
+              </li>
+              <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Facebook</a></li>
+              <li class="mobile-social-list__item">
+                <div class="mobile-social-list__line"></div>
+              </li>
+              <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">LinkedIn</a></li>
+            </ul>
+          </div>
+
+        </div>
       </div>
     </header>
 
@@ -505,7 +542,7 @@
       </div>
     </footer>
     <!-- Модальное окно -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal-window">
         <button class="modal-window__close-button" type="button" data-modal-close>
           <svg class="modal-window__close-button-icon" width="18px"
@@ -550,7 +587,8 @@
           <button class="button modal-form__button_position" type="submit">Отправить</button>
         </form>
       </div>
-    </div> -->
-    <!-- <script src="./js/modal.js"></script> -->
+    </div>
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
