--- a/portfolio.html
+++ b/portfolio.html
@@ -20,17 +20,22 @@
         <!--Шапка-->
         <header class="header">
             <div class="container header__container">
-                <!-- Лого -->
                 <nav class="header__nav">
+                    <!-- Лого -->
                     <a class="logo header__logo" href="index.html">
                         <span class="logo__web">Web</span>Studio</a>
-                <!-- Навигация сайта -->
+                    <!-- Навигация сайта -->
                     <ul class="site-nav list">
                         <li class="site-nav__item"><a class="site-nav__link" href="index.html">Студия</a></li>
                         <li class="site-nav__item"><a class="site-nav__link site-nav__link_current" href="./portfolio.html">Портфолио</a></li>
                         <li class="site-nav__item"><a class="site-nav__link" href="">Контакты</a></li>
                     </ul>
                 </nav> 
+                <button class="header__mobile-menu-button" type="button" data-menu-button>
+                    <svg class="header__mobile-menu_icon" width="40px" height="40px">
+                        <use href="./images/sprite.svg#icon-burger"></use>
+                    </svg>
+                </button>
                     <!--Контакты  -->
                 <ul class="auth-nav list">
                     <li class="auth-nav__item">
@@ -49,6 +54,43 @@
                     </li>
                 </ul>
             </div>
+                <div class="mobile-menu" data-menu>
+                    <div class="container mobile-menu__container">
+                        <button class="mobile-menu__close-button" type="button" data-menu-close>
+                            <svg class="mobile-menu__close-button-icon" width="40px" height="40px">
+                                <use href="./images/sprite.svg#icon-close-btn"></use>
+                            </svg>
+                        </button>
+                        <ul class="mobile-menu__list">
+                            <li class="mobile-menu__item"><a class="mobile-menu__link"
+                                    href="index.html">Студия</a></li>
+                            <li class="mobile-menu__item"><a class="mobile-menu__link mobile-menu__link_current" href="./portfolio.html">Портфолио</a></li>
+                            <li class="mobile-menu__item"><a class="mobile-menu__link" href="">Контакты</a></li>
+                        </ul>
+                        <div class="mobile-contacts">
+                            <a class="mobile-contacts__link mobile-contacts__link_tel" href="tel:+380961111111">
+                                +38 096 111 11 11</a>
+                            <a class="mobile-contacts__link mobile-contacts__link_email" href="mailto:info@devstudio.com">
+                                info@devstudio.com</a>
+                            <ul class="mobile-social-list">
+                                <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Instagram</a></li>
+                                <li class="mobile-social-list__item">
+                                    <div class="mobile-social-list__line"></div>
+                                </li>
+                                <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Twitter</a></li>
+                                <li class="mobile-social-list__item">
+                                    <div class="mobile-social-list__line"></div>
+                                </li>
+                                <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">Facebook</a></li>
+                                <li class="mobile-social-list__item">
+                                    <div class="mobile-social-list__line"></div>
+                                </li>
+                                <li class="mobile-social-list__item"><a class="mobile-social-list__link" href="">LinkedIn</a></li>
+                            </ul>
+                        </div>
+                
+                    </div>
+                </div>
         </header>
 
         <main>
@@ -412,5 +454,6 @@
                 </div>
             </div>
         </footer>
+        <script src="./js/menu.js"></script>
     </body>
 </html>
