--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="mobile-menu" data-menu>
         <div class="container mobile-menu__container">
-          <button class="mobile-menu__close-button" type="button"data-menu-close>
+          <button class="mobile-menu__close-button" type="button" data-menu-close>
             <svg class="mobile-menu__close-button-icon" width="40px" height="40px">
               <use href="./images/sprite.svg#icon-close-btn"></use>
             </svg>
@@ -171,9 +171,9 @@
                 <li class="work-list__item">
                   <picture>
                     <source srcset="./images/main-page/box1.webp 1x, ./images/main-page/box1@2x.webp 2x" 
-                    media="min-width: 1200px" type="image/webp">
+                    media="(min-width: 1200px)" type="image/webp">
                     <source srcset="./images/main-page/box1.jpg 1x, ./images/main-page/box1@2x.jpg 2x" 
-                    media="min-width: 1200px">
+                    media="(min-width: 1200px)">
                     <img
                     src="./images/main-page/box1.jpg"
                     alt="Набор текста на клавиатуре"
@@ -186,18 +186,18 @@
                 </li>
                 <li class="work-list__item">
                 <picture>
-                  <source srcset="./images/main-page/box2.webp 1x, ./images/main-page/box2@2x.webp 2x" media="min-width: 1200px"
+                  <source srcset="./images/main-page/box2.webp 1x, ./images/main-page/box2@2x.webp 2x" media="(min-width: 1200px)"
                     type="image/webp">
-                  <source srcset="./images/main-page/box2.jpg 1x, ./images/main-page/box2@2x.jpg 2x" media="min-width: 1200px">
+                  <source srcset="./images/main-page/box2.jpg 1x, ./images/main-page/box2@2x.jpg 2x" media="(min-width: 1200px)">
                   <img src="./images/main-page/box2.jpg" alt="Набор текста на клавиатуре" width="370" height="294" />
                 </picture>
                 <p class="work-list__text">Мобильные приложения</p>
                 </li>
                 <li class="work-list__item">
                 <picture>
-                  <source srcset="./images/main-page/box3.webp 1x, ./images/main-page/box3@2x.webp 2x" media="min-width: 1200px"
+                  <source srcset="./images/main-page/box3.webp 1x, ./images/main-page/box3@2x.webp 2x" media="(min-width: 1200px)"
                     type="image/webp">
-                  <source srcset="./images/main-page/box3.jpg 1x, ./images/main-page/box3@2x.jpg 2x" media="min-width: 1200px">
+                  <source srcset="./images/main-page/box3.jpg 1x, ./images/main-page/box3@2x.jpg 2x" media="(min-width: 1200px)">
                   <img src="./images/main-page/box3.jpg" alt="Набор текста на клавиатуре" width="370" height="294" />
                 </picture>
                 <p class="work-list__text">Дизайнерские решения</p>
